Modify some layout issues.

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -16,7 +16,7 @@ $left-border-width: 10px
 body
   padding-top: 10px
 
-abbr.employeeNo
+abbr.employeeNo, abbr.schedule
   text-decoration: none
   border-bottom-width: 0px
 
@@ -42,12 +42,13 @@ abbr.employeeNo
     height: $box-height
     margin: 2px
     text-indent: 5px
+    padding-top: 2px
 
 div.EA, div.IT, div.SS, div.Other
   border:
     left-width: $left-border-width
     left-style: solid
-  padding-top: 2px
+  //padding-top: 2px
 
 div.EA
   //background-color: $ea-color
